test/snapshot/negative/profile_removed_idiomatic_alias/compile.hxml
-cp .
-lib reflaxe.go
-D go_output=out
-D reflaxe_go_idiomatic
-main Main
